#5 Filter sidebar for Obits search page  - hide on mobile by default, panel dropdown style in mobile instead of expand  - also re-fix padding on breadcrumb control

--- a/content/sci/css/core.css
+++ b/content/sci/css/core.css
@@ -548,8 +548,8 @@ html.ios .app-promotion-android {
     .breadcrumb-list > li:last-child:after {
       content: none; }
 
-.breadcrumb-panel,
-.breadcrumb-panel-action {
+.component.breadcrumb-panel,
+.component.breadcrumb-panel-action {
   background: #fff;
   color: #4a3c31;
   padding-top: 20px;
@@ -1273,7 +1273,10 @@ fieldset + fieldset {
 .filter-panel {
   border: 1px solid #aeaca9;
   padding: 20px;
-  background: #fff; }
+  background: #fff;
+  position: absolute;
+  z-index: 300;
+  width: 100%; }
 
 .checkboxes, .radio-buttons {
   margin-top: 40px;
@@ -1287,6 +1290,7 @@ fieldset + fieldset {
     font-family: "Lato-Bold", Arial, Helvetica Neue, Helvetica, Lucida Grande, Sans-serif;
     font-size: 20px;
     position: absolute;
+    cursor: pointer;
     top: -40px;
     right: 0; }
   .checkboxes label, .radio-buttons label {
@@ -1315,7 +1319,10 @@ fieldset + fieldset {
     width: 100%; }
 
   .filter-panel {
-    border-top: none; }
+    border-top: none;
+    position: static;
+    display: block !important;
+    height: auto !important; }
 
   .checkboxes, .radio-buttons {
     margin-top: 0; }
@@ -1328,7 +1335,8 @@ fieldset + fieldset {
       position: static;
       border: 1px solid #aeaca9;
       border-bottom: none;
-      font-size: 18px; }
+      font-size: 18px;
+      cursor: default; }
       .checkboxes h4.see-more:after, .radio-buttons h4.see-more:after {
         display: none; } }
 .form-control {
@@ -1893,6 +1901,87 @@ h3 {
     .location-container h2 {
       margin: 20px 0 40px; } }
 
+/** Gallery */
+.component-f01 {
+  padding: 0px !important; }
+  .component-f01 .featured-item-image-wrap .featured-item-image {
+    width: 100%; }
+  .component-f01 .featured-item-image-wrap .featured-item-title {
+    cursor: pointer;
+    position: absolute;
+    background: #4a3c31;
+    color: white;
+    display: block;
+    padding: 15px 20px;
+    text-align: center;
+    right: 0px;
+    opacity: 0.8;
+    bottom: 0px; }
+    .component-f01 .featured-item-image-wrap .featured-item-title h2 {
+      font-size: 1.4em !important;
+      margin: 0px;
+      margin-bottom: 5px; }
+    .component-f01 .featured-item-image-wrap .featured-item-title p {
+      font-family: Lato-Regular,Arial,Helvetica Neue,Helvetica,Lucida Grande,Sans-serif;
+      line-height: 1.5;
+      letter-spacing: 2.4px;
+      font-size: .3em !important;
+      text-transform: uppercase; }
+
+/** Modal Gallery **/
+.modal-title-gallery {
+  padding: 0px; }
+  .modal-title-gallery h2 {
+    margin: 0px !important;
+    margin-top: 20px !important; }
+
+.carousel-gallery .component {
+  padding: 0px; }
+  .carousel-gallery .component .slick-next {
+    width: 35px;
+    height: 50px;
+    right: 5%;
+    top: 32%;
+    background: black;
+    opacity: 0.7;
+    background-image: url(/content/sci/img/arrow-left-rigth.png);
+    background-position: -58px 0px; }
+  .carousel-gallery .component .slick-prev {
+    width: 35px;
+    height: 50px;
+    left: 5%;
+    top: 32%;
+    background: black;
+    opacity: 0.7;
+    background-image: url(/content/sci/img/arrow-left-rigth.png);
+    background-position: -4px 0px; }
+  .carousel-gallery .component .slick-dots {
+    text-align: center; }
+
+/** Responsive Gallery Desktop **/
+@media screen and (min-width: 450px) and (max-width: 799px) {
+  .carousel-gallery .component .slick-next {
+    right: 5%;
+    top: 38%; }
+  .carousel-gallery .component .slick-prev {
+    left: 5%;
+    top: 38%; }
+  .carousel-gallery .component .slick-dots {
+    text-align: center; } }
+@media screen and (min-width: 800px) {
+  .component-f01 {
+    padding: 0 45px 0 45px !important; }
+    .component-f01 .featured-item-image-wrap .featured-item-title {
+      margin-right: 45px; }
+
+  .carousel-gallery .component .slick-next {
+    right: 5%;
+    top: 45%; }
+  .carousel-gallery .component .slick-prev {
+    left: 5%;
+    top: 45%; }
+  .carousel-gallery .component .slick-dots {
+    text-align: center; } }
 a.link-icon {
   display: table; }
   a.link-icon > .icon {
